[package]
name = "socket_addr_macros"
version = "1.0.1"
description = "Check and parse SocketAddr at compile-time"
edition = "2021"
keywords = ["macro", "network"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE.md"]
license = "MIT"
repository = "https://github.com/hiraginoyuki/socket_addr_macros"

[lib]
proc-macro = true

[dependencies]
itertools = "0.10"
proc-macro2 = "1"
quote = "1"
